amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-key.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/arguments-key.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#unmatched-field-in-field-set
  Message: Property 'name' referenced by field set cannot have arguments
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-key.graphql#/declares/shape/Person
  Property: 
  Range: [(1,26)-(1,30)]
  Location: 
